# inst414_project

./: LICENSE  Makefile  README.md  Sprint_2.py  cleaned_wic_data.csv  pyproject.toml  sprint2.ipynb  sprint3.ipynb
CODE NOTEBOOKS FOR SPRINT 2 AND 3/: Sprint_2.py
docs/: mkdocs.yml
docs/docs/: index.md
final_project_mod/: __init__.py  dataset.py  features.py  plots.py
final_project_mod/modeling/: predict.py  train.py
