[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "final_project_mod"
version = "0.0.1"
description = "Analysis of race and overweight status"
authors = [
  { name = "Virginia" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["final_project_mod"]
include = ["pyproject.toml", "final_project_mod/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["final_project_mod"]
force-sort-within-sections = true

